--- a/views/overview.hbs
+++ b/views/overview.hbs
@@ -26,7 +26,7 @@
 </div>
 <div>
     <div class="container-fluid row" id="overview">
-        {{#each arr}}
+        {{#each mutatedData}}
         <div class="container col-md-2" id="circles">
             {{> weeklyDonut}}
         </div>
